resolved more sonarlint issues